tests/artifacts/perf/bd-m4s2c-20260422T204202Z/cpu_update.command
rch exec -- bash -lc 'env CARGO_TARGET_DIR=/home/ubuntu/rch_target_fsqlite_cod4 cargo build --profile release-perf -p fsqlite-e2e --bin perf-update-delete && samply record --save-only -o tests/artifacts/perf/bd-m4s2c-20260422T204202Z/cpu-update-100-of-1000.json.gz -- /home/ubuntu/rch_target_fsqlite_cod4/release-perf/perf-update-delete 1000 20 update'
